# code-sage

./: .gitignore  main.py  pyproject.toml
cli/: app.py
cli/subcommands/: clone.py  delete.py  initialize.py  subcommand_ABC.py  update.py
cli/utils/: path_utils.py
core/: __main__.py  database.py  test_db.py
core/migration/: migration_manager.py  utils.py
core/schema/: 001_initial.sql
